# cloth_simulation

./: Cargo.toml  README.md
src/: cloth_sim_app.rs  cloth_sim_compute.wgsl  main.rs  shader.wgsl  sim_compute.wgsl  sim_gen.rs
