[package]
name = "cloth_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu-bootstrap = { git = "https://github.com/qlurkin/wgpu-bootstrap", tag = "v0.2.0" }
wgpu = "0.17"
winit = "0.28"
log = "0.4"
env_logger = "0.10"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
rand = "0.8.5"
futures = "0.3"

